# air_pollution

./: .gitignore  Dockerfile  data.dvc  docker-compose.yml  okteto.yml  pyproject.toml  reference_data.csv  requirements.txt  test_api.py  testtt.py
.dvc/: config
.github/workflows/: api_workflow.yaml  data_workflow.yaml  model_workflow.yaml  test.yaml  tets_cache.yaml  workflow.yaml
data/.dvc/: config
data/preprocessed/: .gitignore  data_air.csv  data_air.csv.dvc  data_we.csv  data_we.csv.dvc
data/processed/: data.csv  data.csv.dvc
data/raw/: data.json.dvc
data/raw/weather/: data.json  data.json.dvc
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: my_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id  expectation_suite.json
models/: linear  model.pickle  var_model
notebooks/: data.ipynb  evaluate.ipynb  mlflow.ipynb  model.ipynb
reports/: data_drift.html  metrics.txt  train_metrics.txt
src/client/: package-lock.json  package.json
src/client/src/: styles.scss
src/client/src/app/: app.component.html  app.component.scss  app.component.ts  network.service.ts
src/data/: data_stability.py  data_validation.py  fetch_air_data.py  fetch_data.py  fetch_weather_data.py  merge_processed_data.py  preprocess_air_data.py  preprocess_weather_data.py  split_train_test.py  update_reference.py
src/models/: monitor.py  predict_model.py  train_model.py
src/serve/: server.py
test/: test_air_data.py  test_server_api.py  test_weather_data.py
