[tool.poetry]
name = "air-pollution"
version = "0.1.0"
description = ""
authors = ["Jana Jankovic"]
readme = "README.md"
packages = [
    { include = "src/data/*.py" },
    { include = "src/models/*.py" },
]

[tool.poetry.scripts]
fetch_air_data = "src.data.fetch_air_data:main"
fetch_weather_data = "src.data.fetch_weather_data:main"
preprocess_air_data = "src.data.preprocess_air_data:main"
preprocess_weather_data = "src.data.preprocess_weather_data:main"
merge_processed_data = "src.data.merge_processed_data:main"
predict_model = "src.models.predict_model:main"
server = "src.serve.server:main"
data_stability = "src.data.data_stability:main"
data_validation = "src.data.data_validation:main"

[tool.poetry.dependencies]
python = "3.10.5"
numpy = "1.23.5"
pandas = "^1.5.3"
flask = "^2.2.3"
scikit-learn = "^1.2.1"
pytest = "^7.2.1"
great-expectations = "^0.16.1"
evidently = "^0.2.7"
mlflow = "^2.2.2"
flask-cors = "^3.0.10"
requests = "^2.28.2"
dvc = "^2.51.0"
dvc-s3 = "^2.21.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
